--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,15 @@
             "email": "andrew.masiye@assegaiphp.com"
         }
     ],
-    "require-dev": {
-        "codeception/codeception": "^5.0"
-    },
     "require": {
         "php": ">=8.2"
     },
+    "require-dev": {
+        "pestphp/pest": "^2.6"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    }
 }
